--- a/UWMadison2016/stochprog/farmer.ipynb
+++ b/UWMadison2016/stochprog/farmer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -25,11 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model parameters\n",
     "\n",
@@ -71,13 +82,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":Optimal"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create Model \n",
+    "# Create Model (standard)\n",
+    "m = Model(solver=IpoptSolver(print_level=0))\n",
+    "\n",
+    "@variable(m, x[P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, cost[s in S])   # per scenario cost\n",
+    "\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P}) \n",
+    "@constraint(m, cap[s in S], sum{x[j], j in P} <= 500)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[j]+y[s,j]-w[s,j] >= demand[j]) \n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "\n",
+    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "\n",
+    "solve(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 1 dimensions:\n",
+      "[1] = 220.00000380025003\n",
+      "[2] = 79.99999920015239\n",
+      "[3] = 200.00000199955198\n",
+      "\n",
+      "\n",
+      "y: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 0.0\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 9.632874071974721e-9\n",
+      "[2,:]\n",
+      "  [2,1] = 0.0\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 9.749026913123416e-9\n",
+      "[3,:]\n",
+      "  [3,1] = 0.0\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 9.667054155588147e-9\n",
+      "[4,:]\n",
+      "  [4,1] = 0.0\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 9.709581102331193e-9\n",
+      "[5,:]\n",
+      "  [5,1] = 0.0\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 5.4591602227690745e-9\n",
+      "\n",
+      "\n",
+      "w: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 350.0000114907356\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 2000.0000200148047\n",
+      "[2,:]\n",
+      "  [2,1] = 350.0000114907356\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 3000.0000300126812\n",
+      "[3,:]\n",
+      "  [3,1] = 350.0000114907356\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 4000.000040010359\n",
+      "[4,:]\n",
+      "  [4,1] = 350.0000114907356\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 5000.000050008161\n",
+      "[5,:]\n",
+      "  [5,1] = 350.0000114907356\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 6000.000059999594\n",
+      "\n",
+      "\n",
+      "cost: 1 dimensions:\n",
+      "[1] = -28100.001770977455\n",
+      "[2] = -64100.002130901\n",
+      "[3] = -100100.0024908174\n",
+      "[4] = -136100.0028507383\n",
+      "[5] = -172100.00321042986\n",
+      "\n",
+      "\n",
+      "obj -100100.00249077281\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Results\n",
+    "println(getvalue(x))\n",
+    "println(\"\")\n",
+    "println(getvalue(y))\n",
+    "println(\"\")\n",
+    "println(getvalue(w))\n",
+    "println(\"\")\n",
+    "println(getvalue(cost))\n",
+    "println(\"\")\n",
+    "println(\"obj \",getobjectivevalue(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":Optimal"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create Model (non-anticipativity)\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
@@ -99,11 +247,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 220.00000379973474\n",
+      "  [1,2] = 79.99999920015239\n",
+      "  [1,3] = 200.0000020000673\n",
+      "[2,:]\n",
+      "  [2,1] = 220.00000379973474\n",
+      "  [2,2] = 79.99999920015239\n",
+      "  [2,3] = 200.0000020000673\n",
+      "[3,:]\n",
+      "  [3,1] = 220.00000379973474\n",
+      "  [3,2] = 79.99999920015239\n",
+      "  [3,3] = 200.0000020000673\n",
+      "[4,:]\n",
+      "  [4,1] = 220.00000379973474\n",
+      "  [4,2] = 79.99999920015239\n",
+      "  [4,3] = 200.0000020000673\n",
+      "[5,:]\n",
+      "  [5,1] = 220.00000379973474\n",
+      "  [5,2] = 79.99999920015239\n",
+      "  [5,3] = 200.0000020000673\n",
+      "\n",
+      "\n",
+      "y: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 0.0\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 0.0\n",
+      "[2,:]\n",
+      "  [2,1] = 0.0\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 0.0\n",
+      "[3,:]\n",
+      "  [3,1] = 0.0\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 0.0\n",
+      "[4,:]\n",
+      "  [4,1] = 0.0\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 0.0\n",
+      "[5,:]\n",
+      "  [5,1] = 0.0\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 0.0\n",
+      "\n",
+      "\n",
+      "w: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 350.00001148944745\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 2000.0000200003253\n",
+      "[2,:]\n",
+      "  [2,1] = 350.00001148944745\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 3000.000030000662\n",
+      "[3,:]\n",
+      "  [3,1] = 350.00001148944745\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 4000.0000400009985\n",
+      "[4,:]\n",
+      "  [4,1] = 350.00001148944745\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 5000.000050001335\n",
+      "[5,:]\n",
+      "  [5,1] = 350.00001148944745\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 6000.000059999594\n",
+      "\n",
+      "\n",
+      "cost: 1 dimensions:\n",
+      "[1] = -28100.001770180523\n",
+      "[2] = -64100.00213019264\n",
+      "[3] = -100100.00249020477\n",
+      "[4] = -136100.00285021687\n",
+      "[5] = -172100.00321015422\n",
+      "\n",
+      "\n",
+      "obj -100100.00249018983\n"
+     ]
+    }
+   ],
    "source": [
     "# Results\n",
     "println(getvalue(x))\n",
@@ -116,15 +349,6 @@
     "println(\"\")\n",
     "println(\"obj \",getobjectivevalue(m))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
